2009-12-01 Borut Razem <borut.razem AT siol.net>

	* as/link/aslink.h, as/link/lkmain.c, as/link/z80/Makefile.in,
	  as/link/z80/lkmain.c:
	  temporarily re-added special lkmain.c for z80 and gb targets

2009-11-29 Borut Razem <borut.razem AT siol.net>

	* src/mcs51/main.c, src/z80/main.c, src/hc08/main.c, src/ds390/main.c,
	  as/asxxsrc/sdas.c, as/link/Makefile.in, as/link/lkmain.c,
	  as/link/z80/Makefile.in, as/link/mcs51/Makefile.in,
	  as/link/hc08/Makefile.in, as/link/aslink.h, as/link/sdlink.[ch],
	  as/link/sdld.[ch], sdcc/as/asxxsrc/sdas.c, as/link/lkdata.c,
	  as/link/lkmain.c:
	  fixed bug in target detection, sdlink renamed to sdld

2009-11-28 Borut Razem <borut.razem AT siol.net>

	* as/asxxsrc/asdata.c, as/asxxsrc/asmain.c, as/asxxsrc/asxxxx.h:
	  mark sdas specifics
	* as/asxxsrc/sdas.c, as/asxxsrc/sdas.h, as/link/aslink.h,
	  as/link/hc08/lkarea.c, as/link/hc08/lkmain.c, as/link/hc08/lkmem.c,
	  as/link/hc08/Makefile.aslink, as/link/hc08/Makefile.in,
	  as/link/lkmain.c, as/link/Makefile.in, as/link/mcs51/lkmain.c,
	  as/link/mcs51/Makefile.aslink, as/link/mcs51/Makefile.in,
	  as/link/z80/linkgbz80.dsp, as/link/z80/linkz80.dsp,
	  as/link/z80/lkarea.c, as/link/z80/lkgb.c, as/link/z80/lkmain.c,
	  as/link/z80/lkmem.c, as/link/z80/Makefile.in, src/ds390/main.c,
	  src/hc08/main.c, src/mcs51/main.c, src/z80/main.c,
	  as/link/sdlink.[ch]:
	  lkmain.c unification; linkers renamed to sdlinkXXXX

2009-11-27 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/config.guess, sim/ucsim/ltmain.sh, sim/ucsim/config.sub:
	  upgraded to libtool 2.2.5,
	  fixed dug #2897829: ancient-libtool sim/ucsim/ltmain.sh 1.4.2

2009-11-06 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c (pic14_getDataSize): use true size of generic
	  pointers to fix assignment of the result of pointer arithmetics

2009-11-05 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c (genUnpackBits): setup FSR before using it, fixes